--- a/config/project.yaml
+++ b/config/project.yaml
@@ -68,7 +68,7 @@ presets:
       - source: content/website/_includes/footer.html
         destination: docs/_includes/footer.html
       - source: content/website/_includes/menu.html
-        destination: tmp/menu.html
+        destination: docs/_includes/menu.html
       #  destination: docs/_includes/menu.html
         mode: html
       - source: content/website/_includes/header.html
