added csf as one file

--- a/config/structure.yaml
+++ b/config/structure.yaml
@@ -201,6 +201,7 @@ parts:
           - id: fractal-organization
             tags: [pattern]
 
+  - id: csf
   - id: appendix
     parts:
       - changelog
