--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -57,7 +57,7 @@ terms:
   continuous-improvement:
     name: Continuous Improvement (principle)
     definition:
-    glossary: "**Regularly review the outcome of what you are doing, and then make incremental improvements to what you do and how you do it**, based on what you learn,* so that you can adapt to changes when necessary, and maintain or improve effectiveness over time."
+    glossary: "**Regularly review the outcome of what you are doing, and then make incremental improvements to what you do and how you do it based on what you learn**, so that you can adapt to changes when necessary, and maintain or improve effectiveness over time."
   coordination:
     name: Coordination
     definition:
