removed duplicated text, typos, added links for principles

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -91,7 +91,7 @@ terms:
   empiricism:
     name: Empiricism (principle)
     definition:
-    glossary: "**Test all assumptions you rely on, through experiments and continuous revision**, so that you learn fast, make sense of things and navigate complexity as effectively as you can."
+    glossary: "**Test all assumptions you rely on through experiments and continuous revision**, so that you learn fast, make sense of things and navigate complexity as effectively as you can."
   equivalence:
     name: Equivalence (principle)
     definition:
