--- a/config/project.yaml
+++ b/config/project.yaml
@@ -2,7 +2,7 @@ defaults:
   # these are available for substitution in templates
   variables:
     # Version of the practical guide (added to all releases)
-    version: "v2021-06-18a"
+    version: "v2021-08-15"
     # Language and text direction for Jekyll site and epub
     html-language: "en"
     html-dir: "ltr"
