--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -74,12 +74,12 @@ terms:
     glossary: An individual or group delegating responsibility for a domain to other(s).
   deliverable:
     name: Deliverable
-    definition: A **deliverable** is a product, service, component or material provided in response to an organizational driver.
-    glossary: A product, service, component or material provided in response to an organizational driver.
+    definition: A **deliverable** is a product, service, component or material provided to fulfill a requirement.
+    glossary: A product, service, component or material provided to fulfill a requirement.
   domain:
     name: Domain
-    definition: A **domain** is a distinct area of influence, activity and decision-making within an organization.
-    glossary: A distinct area of influence, activity and decision-making within an organization.
+    definition: A **domain** is a distinct area of responsibility and authority within an organization.
+    glossary: A distinct area of responsibility and authority within an organization.
   driver:
     name: Driver
     definition: A **driver** is a person’s or a group's motive for responding to a specific situation.
@@ -159,8 +159,12 @@ terms:
     glossary: A group of people collaborating toward a shared driver (or objective). Often an organization subdivides into several teams.
   organizational-driver:
     name: Organizational Driver
-    definition:
-    glossary: A driver is a person’s or a group's motive for responding to a specific situation. A driver is considered an **organizational driver** if responding to it would help the organization generate value, eliminate waste or avoid unintended consequences.
+    definition: An **organizational driver** is any situation where the organization’s members have a motive to respond because they anticipate that doing so would be beneficial for the organization (by helping to generate value, eliminate waste or avoid undesirable risks or consequences).
+    glossary: Any situation where the organization’s members have a motive to respond because they anticipate that doing so would be beneficial for the organization (by helping to generate value, eliminate waste or avoid undesirable risks or consequences).
+  overall-domain:
+    name: Overall Domain
+    definition: The **overall domain** of an organization defines the organization's purpose, overall strategy, business model(s), and other standard constraints.
+    glossary: The domain that defines the organization's purpose, overall strategy, business model(s), and other standard constraints.
   pattern:
     name: Pattern
     definition: A **pattern** is a process, practice or guideline that serves as a template for successfully responding to a specific kind of challenge or opportunity.
@@ -177,6 +181,11 @@ terms:
     name: Principle
     definition: A **principle** is a basic idea or rule that guides behavior, or explains or controls how something happens or works.
     glossary: A basic idea or rule that guides behavior, or explains or controls how something happens or works.
+  requirement:
+    name: Requirement
+    definition: A requirement is a need or desire considered necessary to fulfill to respond to an organizational driver, adequately or as a suitable incremental next step.
+    glossary: A need or desire considered necessary to fulfill to respond to an organizational driver, adequately or as a suitable incremental next step.
+    The need or desire considered necessary to fulfill, to adequately respond to an organizational driver.
   role:
     name: Role
     definition:
@@ -207,6 +216,10 @@ terms:
   sociocracy:
     name: Sociocracy
     glossary: An approach for organizing together where people affected by decisions can influence them on the basis of reasons to do so.
+  standard-constraint:
+    name: Standard Constraint
+    definition: A **standard constraint** is a constraint that affects several domains (e.g. all sales teams, an entire branch, platform, or department), or even all domains of the organization (e.g. company-wide strategy, a business models, or an organization-wide rule).
+    glossary: A constraint that affects several domains (e.g. all sales teams, an entire branch, platform, or department), or even all domains of the organization (e.g. company-wide strategy, a business models, or an organization-wide rule).
   strategy:
     name: Strategy
     definition: A **strategy** is a high level approach for how people will create value to successfully account for a domain.
@@ -222,7 +235,7 @@ terms:
   superdriver:
     name: Superdriver
     definition:
-    glossary: see subdriver.
+    glossary: see Subdriver.
   superdomain:
     name: Superdomain
     definition:
@@ -246,7 +259,7 @@ terms:
   value:
     name: Value
     definition: "**Value** is the importance, worth or usefulness of something in relation to a driver."
-    glossary: The importance, worth or usefulness of something in relation to a driver. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values").
+    glossary: The importance, worth or usefulness of something in relation to a driver. Also "a valued principle that guides behavior" (mostly used as plural, "values", or "organizational values").
   values:
     name: Values
     definition: "**Values** are valued principles that guide behavior. Values define scope for action and ethical constraints."
